# qc

./: .gitignore  HANDOFF.md  README.md  TESTING.md  conftest.py  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  factory.py  main.py
backend/app/api/: __init__.py  auth_routes.py  calibration_routes.py  dashboard_routes.py  deployment_routes.py  inspection_routes.py  machine_settings_routes.py  template_routes.py  workstation_routes.py
backend/tests/: test_api_smoke.py  test_auth_storage_wiring.py  test_clamp_gate_retry.py  test_dataset_versioning.py  test_device_runtime.py  test_evaluators.py  test_golden_templates.py  test_inspection_persistence.py  test_meta_auto_discover.py  test_model_catalog.py  test_model_export_import.py  test_operator_phase_delays.py  test_plc_modbus_adapter.py  test_plc_worker_feedback.py  test_reject_log_repository.py  test_security.py  test_shutdown_hooks.py  test_sticker_detection_gates.py  test_sticker_inference.py  test_templates_contract.py  test_training_metrics.py  test_training_worker_data_yaml.py  test_training_worker_model_resolution.py
client_tk/: __init__.py
client_tk/app/: __init__.py  api_client.py  config.py  main.py  mode_utils.py  theme.py
client_tk/tests/: test_async_bridge.py  test_frame_upload.py  test_ui_smoke.py
data/models/: akh.csv  args.json  args_2.json  args_3.json  args_5.json  ds-43598c556c__yolov5mu__20260402-085412.meta.json  h30_openvino_model.meta.json  inspections.csv  kecil_float16.json  modbus_fp16.json
deploy/: .env.example  client-packaging.md  windows-service-backend.md
docs/: README.md  api-contract.md  deployment-guide.md  hardening-checklist.md  manual-book.md  migration-notes.md  roi-visual-picker-plan.md  screen-map.md  two-roi-ml-implementation-plan.md  ui-component-spec.md  ui-wireframes.md
guidebook/: QC_Suite_Operator_Manual.docx  QC_Suite_Operator_Manual.pptx  generate_manual.py
scripts/: bootstrap_env.py  drop_legacy_auth_tables.py  run_backend.py  run_client.py  run_desktop.py  run_tests.sh  smoke_api.py
shared/: __init__.py
shared/contracts/: __init__.py  augment.py  auth.py  decision.py  enums.py  inspection.py  streaming.py  templates.py
(+107 files in other folders)
