[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qc-suite-python"
version = "0.1.0"
description = "Greenfield QC suite with Flask backend and Tkinter desktop client."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "customtkinter>=5.2,<6.0",
  "requests>=2.31,<3.0",
  "python-dotenv>=1.0,<2.0",
  "numpy>=1.26,<3.0",
  "opencv-python>=4.10,<5.0",
  "Pillow>=10.3,<12.0",
  "pytesseract>=0.3.10,<0.4",
  "pyodbc>=5.2,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "ultralytics>=8.3,<9.0",
  "websockets>=12.0,<15.0",
  "pymodbus>=3.6,<4.0",
  "pyserial>=3.5,<4.0",
  "onnxruntime>=1.18.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "client_tk*", "shared*"]

[tool.pytest.ini_options]
# Run from the repo root: `python -m pytest backend/tests`
# rootdir is the repo root so the root-level conftest.py is always loaded,
# which fixes sys.path and seeds the model-registry env before app import.
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["*Test", "Test*"]
python_functions = ["test_*"]
markers = [
  "requires_real_sticker_model: needs the production sticker model (outside repo); skipped in bare checkout",
  "requires_plc_hardware: needs real PLC hardware; skipped",
  "suspected_regression: pinned RED to flag a possible production regression (see HANDOFF.md)",
]
